--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
-<html>
-  <head>
-    <title>Rango</title>
-  </head>
+{% block title_block %} Add a Category {% endblock %}
+
+{% block body_block %}
   <body>
     <h1>Add a Category</h1>
     <div>
-      <form id="category_form" method="post" action="/rango/add_category/">
+      <form id="category_form" method="post" action="{% url 'rango:add_category' %}">
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
           {{ hidden }}
@@ -21,5 +20,5 @@
         <input type="submit" name="submit" value="Create Category" />
       </form>
     </div>
- </body>
-</html>
+  </body>
+{% endblock %}
