--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,9 +5,10 @@
 
 {% block body_block %}
   <h1>Rango says...</h1>
-  <div>
+  <p>
     here is the about page. <br />
     <strong>{{ boldmessage }}</strong><br />
+    <p>Visits: {{ visits }}</p>
   </div>
   <div>
     <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
